@@ -4,6 +4,8 @@
   [New Features]
     * Add Net::SSLeay::XX509#new method.
     * Add Net::SSLeay::XX509#get_pubkey method.
+  [Incompatibe Changes]
+    * Net::SSLeay::XX509#get_pubkey method returns a copied value.
 0.024 2024-12-06
   [New Features]
     * Add Net::SSLeay::XX509_EXTENSION#new method.
